--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -12,7 +13,7 @@
 <tw-storydata name="Tide of Truth" startnode="4" creator="Twine" creator-version="2.10.0" format="Harlowe" format-version="3.3.9" ifid="A7F4C8E2-9B3D-4E5A-8F1B-2C3D9F6E7A1C" options="" tags="" zoom="1" hidden><style role="stylesheet" id="twine-user-stylesheet" type="text/twine-css"></style><script role="script" id="twine-user-script" type="text/twine-javascript"></script><tw-passagedata pid="1" name="StoryBanner" tags="header" position="100,425" size="100,100">
 &lt;!-- Static header: game title + right‑aligned save button only --&gt;
 &#39;&#39;Tide of Truth&#39;&#39; — //Predict the Waves, Protect the Town// (align:&quot;==&gt;&quot;)[ (link:&quot;💾 Save&quot;)[ (save-game:&quot;slot1&quot;) ] ]</tw-passagedata><tw-passagedata pid="2" name="StatusBar" tags="" position="100,200" size="100,100">
-|bar&gt;[ &#39;&#39;Level:&#39;&#39; $playerLevel | &#39;&#39;Credit:&#39;&#39; $credit (if:$hourLeft &lt; 60)[| &#39;&#39;Minutes left:&#39;&#39; $hourLeft] ]
+|bar&gt;[ &#39;&#39;Level:&#39;&#39; $playerLevel | &#39;&#39;Credit:&#39;&#39; $credit (if:$secLeft &lt; 3600)[| &#39;&#39;Time left:&#39;&#39; (print:(floor:$secLeft/60)):(if:$secLeft%60 &lt; 10)[&#39;0&#39;](print:$secLeft%60) ] ]
 </tw-passagedata><tw-passagedata pid="3" name="StoryFooter" tags="footer" position="100,300" size="100,100">
 &lt;!-- empty for now --&gt;
   </tw-passagedata><tw-passagedata pid="4" name="Start" tags="" position="200,100" size="100,100">
@@ -97,8 +98,9 @@ sin θ = 4 / 5 = 0.8.
 ***Promoted to Assistant (+50 credit).***
 [[Proceed to Bootcamp-&gt;BootcampWelcome]]
   </tw-passagedata><tw-passagedata pid="17" name="BootcampWelcome" tags="" position="500,200" size="100,100">
-(set:$hourLeft to 60)
+
 (display:&quot;StatusBar&quot;)
+&lt;img src=&quot;https://cdn.pixabay.com/photo/2017/08/18/08/03/idea-2654148_1280.jpg&quot;&gt;
 Welcome to the **Tidal‑Model Bootcamp**.
 (link:&quot;Bootcamp rules&quot;)[Earn **+20** credit first correct pick, **−5** for each miss.&lt;br&gt;Hit 100 → Scientist, 150 → Leading Scientist.]
 [[Start work-&gt;BootcampIntro]]
@@ -187,8 +189,10 @@ Great job! With $credit credit you’re now a **Scientist**. You’ll head to th
 You’ve gathered $credit credit—short of promotion, but your insights are still crucial. The council calls you straight to the War Room to vote on the flood-wall.
 [[Head to War Room-&gt;WarRoom]]
 ]</tw-passagedata><tw-passagedata pid="29" name="LabStart" tags="" position="700,200" size="100,100">
-(set:$Aok to false)(set:$Bok to false)(set:$Cok to false)(set:$Dok to false)(set:$hourLeft to 60)
-(live:1s)[(set:$hourLeft to $hourLeft-1)(replace:?bar)[ &#39;&#39;Level:&#39;&#39; $playerLevel | &#39;&#39;Credit:&#39;&#39; $credit (if:$hourLeft &lt; 60)[| &#39;&#39;Minutes left:&#39;&#39; $hourLeft] ](if:$hourLeft &lt;= 0)[(goto:&quot;BootcampWelcome&quot;)]]
+(set:$Aok to false)(set:$Bok to false)(set:$Cok to false)(set:$Dok to false)(set:$secLeft to 3600)
+(set:$hourLeft to 60)
+(set:$secLeft to 3600)
+(live:1s)[(set:$secLeft to $secLeft-1)(replace:?bar)[ &#39;&#39;Level:&#39;&#39; $playerLevel | &#39;&#39;Credit:&#39;&#39; $credit (if:$secLeft &lt; 3600)[| &#39;&#39;Time left:&#39;&#39; (print:(floor:$secLeft/60)):(if:$secLeft%60 &lt; 10)[&#39;0&#39;](print:$secLeft%60) ]  ](if:$secLeft &lt;= 0)[(goto:&quot;BootcampWelcome&quot;)]]
 (display:&quot;StatusBar&quot;)
 
 Hurricane Calypso is ~30 h out; engineers need one hour’s notice. Your model must be ready in **60 minutes**.
@@ -201,36 +205,45 @@ Stormhaven’s data team offers **two distinct feeds** to anchor your model:
 Choose wisely; whichever dataset you trust will set the curve of *f(x)=A·sin(B·(x+C))+D*—and every minute counts.
 </tw-passagedata><tw-passagedata pid="30" name="DataJamie" tags="" position="800,325" size="100,100">
 (set:$hourLeft to $hourLeft-4)
+(set:$secLeft to $secLeft-240)   &lt;!-- 4 min --&gt;
 (display:&quot;StatusBar&quot;)
+(live:1s)[(set:$secLeft to $secLeft-1)(replace:?bar)[ &#39;&#39;Level:&#39;&#39; $playerLevel | &#39;&#39;Credit:&#39;&#39; $credit (if:$secLeft &lt; 3600)[| &#39;&#39;Time left:&#39;&#39; (print:(floor:$secLeft/60)):(if:$secLeft%60 &lt; 10)[&#39;0&#39;](print:$secLeft%60) ]  ](if:$secLeft &lt;= 0)[(goto:&quot;BootcampWelcome&quot;)]]
 &lt;img src=&quot;https://cdn.pixabay.com/photo/2021/01/01/22/12/lighthouse-5880159_1280.jpg&quot;&gt;
 Jamie’s logs record tide peaks and the tide level at other point in time.  
 These data will seed *f(x)=A·sin(B·(x+C))+D*, where **A** is amplitude, **B** sets frequency, **C** shifts phase, **D** is mid-sea-level.
 You can not wait puting the data point into a [[Chart-&gt;LabChart]]...
   </tw-passagedata><tw-passagedata pid="31" name="DataBuoy" tags="" position="700,325" size="100,100">
 (set:$hourLeft to $hourLeft-2)
+(set:$secLeft to $secLeft-120)   &lt;!-- 2 min --&gt;
 (display:&quot;StatusBar&quot;)
+(live:1s)[(set:$secLeft to $secLeft-1)(replace:?bar)[ &#39;&#39;Level:&#39;&#39; $playerLevel | &#39;&#39;Credit:&#39;&#39; $credit (if:$secLeft &lt; 3600)[| &#39;&#39;Time left:&#39;&#39; (print:(floor:$secLeft/60)):(if:$secLeft%60 &lt; 10)[&#39;0&#39;](print:$secLeft%60) ]  ](if:$secLeft &lt;= 0)[(goto:&quot;BootcampWelcome&quot;)]]
+&lt;img src=&quot;https://cdn.pixabay.com/photo/2020/02/12/20/38/buoy-4843825_1280.jpg&quot;&gt;
 Buoy sensors stream tide heights every 30 min—clean, high-resolution curves.  
 You’ll fit them to *f(x)=A·sin(B·(x+C))+D* by tuning each coefficient.
 [[Chart-&gt;LabChart]]
   </tw-passagedata><tw-passagedata pid="32" name="LabChart" tags="" position="700,500" size="100,100">
 (display:&quot;StatusBar&quot;)
-(live:60s)[(set:$hourLeft to $hourLeft-1)(display:&quot;StatusBar&quot;)(if:$hourLeft &lt;= 0)[(goto:&quot;BootcampWelcome&quot;)]]
+(live:1s)[(set:$secLeft to $secLeft-1)(replace:?bar)[ &#39;&#39;Level:&#39;&#39; $playerLevel | &#39;&#39;Credit:&#39;&#39; $credit (if:$secLeft &lt; 3600)[| &#39;&#39;Time left:&#39;&#39; (print:(floor:$secLeft/60)):(if:$secLeft%60 &lt; 10)[&#39;0&#39;](print:$secLeft%60) ]  ](if:$secLeft &lt;= 0)[(goto:&quot;BootcampWelcome&quot;)]]
 &lt;img src=&quot;https://lh3.googleusercontent.com/pw/AP1GczONXZG6QUFyJzzzM2TNs47LKV5mMts3t3OPnZb5NCEYJi6bI66_tLoCVNgwKcr-2mYIDaOkJkYqijQtzn-kjHGmUEltLXGZn18LcwhbcUf_CoiK5p0uB08yrcwx28KHDt5wyiIJ0QkN_I3R-xQQD0Q=w1070-h934-s-no?authuser=0&quot; style=&quot;max-width:800px;&quot;&gt;
 Forecast model: *f(x)=A·sin(B·(x+C))+D*  
 Pick values that align the curve with your dataset.
 
 *f(x)=(dropdown: bind $A,&quot;select&quot;,&quot;5.0&quot;,&quot;4.8&quot;,&quot;1.0&quot;,&quot;3.3&quot;,&quot;12.4&quot;,&quot;36π&quot;,&quot;5π&quot;)·sin((dropdown: bind $B,&quot;select&quot;,&quot;11/14&quot;,&quot;π/4&quot;,&quot;22/7&quot;,&quot;1.57&quot;,&quot;3.42&quot;,&quot;2π&quot;,&quot;10&quot;)·(x+(dropdown: bind $C,&quot;select&quot;,&quot;6.0&quot;,&quot;5.8&quot;,&quot;3π/2&quot;,&quot;11/14&quot;,&quot;22/7&quot;,&quot;4.9&quot;,&quot;13.6&quot;)))+(dropdown: bind $D,&quot;select&quot;,&quot;10&quot;,&quot;11&quot;,&quot;9&quot;,&quot;12&quot;,&quot;15&quot;,&quot;8&quot;,&quot;5&quot;)*
 
-[[Submit your model for verification-&gt;ModelEval]]
-  {
-(if:$A is not &quot;select&quot; and $B is not &quot;select&quot;
-    and $C is not &quot;select&quot; and $D is not &quot;select&quot;)
-  [[Submit your model for verification-&gt;ModelEval]]
-(else:)
-  (text-color:#888)[//Submit once all four are chosen//]
-}</tw-passagedata><tw-passagedata pid="33" name="ModelEval" tags="" position="700,600" size="100,100">
+|submit&gt;[]
+
+(live:1s)[
+  (replace:?submit)[
+    (if: $A is not &quot;select&quot; and $B is not &quot;select&quot; and $C is not &quot;select&quot; and $D is not &quot;select&quot;)[
+      [[Submit your model for verification-&gt;ModelEval]]
+    ](else:)[
+      (text-color:#888)[//Choose all four coefficients to enable Submit//]
+    ]
+  ]
+]
+</tw-passagedata><tw-passagedata pid="33" name="ModelEval" tags="" position="700,600" size="100,100">
 &lt;!-- Evaluate coefficient selection, THEN show status bar so values are current --&gt;
-(live:60s)[(set:$hourLeft to $hourLeft-1)(display:&quot;StatusBar&quot;)(if:$hourLeft &lt;= 0)[(dialog:&quot;Time is out !!!&quot;)(goto:&quot;BootcampWelcome&quot;)]]
+(live:1s)[(set:$secLeft to $secLeft-1)(replace:?bar)[ &#39;&#39;Level:&#39;&#39; $playerLevel | &#39;&#39;Credit:&#39;&#39; $credit (if:$secLeft &lt; 3600)[| &#39;&#39;Time left:&#39;&#39; (print:(floor:$secLeft/60)):(if:$secLeft%60 &lt; 10)[&#39;0&#39;](print:$secLeft%60) ]  ](if:$secLeft &lt;= 0)[(goto:&quot;BootcampWelcome&quot;)]]
 (set:$correct to 0)
 (if:$A is &quot;5.0&quot; or $A is &quot;4.8&quot;)[(set:$correct to $correct+1)]
 (if:$B is &quot;11/14&quot; or $B is &quot;π/4&quot;)[(set:$correct to $correct+1)]
@@ -243,6 +256,10 @@ Pick values that align the curve with your dataset.
 (display:&quot;StatusBar&quot;)
 You scored $correct / 4.  
 Every mismatch nudges the forecast off course—refine and out‑smart the storm!
+
+(if:$credit &lt; 20)[
+&lt;img src=&quot;https://cdn.pixabay.com/photo/2017/08/27/09/21/woman-2685462_1280.jpg&quot;&gt;
+You tried your best, however, you do not have enough credit to move on. Maybe taking a step back working as an assistant is your best fit (set:$playerLevel to &quot;Assistant&quot;)(dialog:&quot;Bootcamp again. I will be back soon!&quot;)(goto:&quot;BootcampWelcome&quot;)]
 
 (if:$correct is 4)[
 &lt;img src=&quot;https://cdn.pixabay.com/photo/2017/08/27/09/19/woman-2685460_1280.jpg&quot;&gt;
@@ -257,9 +274,7 @@ Not there yet, what&#39;s wrong? you want to[[retry (–10)-&gt;LabChart]]]
 &lt;img src=&quot;https://cdn.pixabay.com/photo/2017/08/27/09/21/woman-2685462_1280.jpg&quot;&gt;
 Never mind, I will[[retry (–20)-&gt;LabChart]]]
 (else:)[[[Retry (–50)-&gt;LabChart]]]
-(if:$credit &lt; 20)[
-&lt;img src=&quot;https://cdn.pixabay.com/photo/2017/08/27/09/21/woman-2685462_1280.jpg&quot;&gt;
-You tried your best. Maybe taking a step back work as an assistant is my best fit (set:$playerLevel to &quot;Assistant&quot;)(dialog:&quot;Time is out !!!&quot;)(goto:&quot;BootcampWelcome&quot;)]
+
   </tw-passagedata><tw-passagedata pid="34" name="WarRoom" tags="" position="800,100" size="100,100">
 (display:&quot;StatusBar&quot;)
 &lt;img src=&quot;https://cdn.pixabay.com/photo/2021/10/29/09/27/lake-6751477_1280.jpg&quot; style=&quot;max-width:600px;&quot;&gt;
